[package]
name = "hiyori"
version = "0.1.0"
authors = ["Junichi Kakisako <kilo.sw@gmail.com>"]
description = "CLI application to check the current weather."
readme = "README.md"
categories = ["command-line-utilities"]
homepage = "https://github.com/kironono/hiyori"
repository = "https://github.com/kironono/hiyori"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hiyori"
path = "src/bin/hiyori/main.rs"

[dependencies]
chrono = "0.4.19"
clap = "2.34.0"
http = "0.2.5"
reqwest = { version = "0.11.7", features = ["blocking", "json"] }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
